--- a/front/src/style/firstPage.css
+++ b/front/src/style/firstPage.css
@@ -16,6 +16,11 @@
   padding: 0 1rem;
   align-items: center;
   justify-content: center;
+  background: rgba(0, 0, 0, 0.40);
+  border: 2px solid #00ff00;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.30) 2px 2px;
+
 }
 
 .main-navigation_item {
@@ -48,5 +53,10 @@
 
 .start {
   color: #00ff00;
-  margin: 1rem;
+  margin: 3rem 1.5rem;
+  padding: 1rem;
+  background: rgba(0, 0, 0, 0.40);
+  border: 2px solid #00ff00;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.30) 2px 2px;
 }
