--- a/front/src/app/firstPage/components/logowanie/logowanie.css
+++ b/front/src/app/firstPage/components/logowanie/logowanie.css
@@ -49,4 +49,32 @@
   border: 1px solid rgba(0, 0, 0, 0.8);
   color: rgba(0, 0, 0, 1);
   font-weight: bold;
+  cursor: pointer;
+}
+
+.uwaga {
+  text-align: center;
+  font-weight: bold;
+  text-shadow: 1px 1px rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
+  padding: 0 1rem;
+  border-radius: 5px;
+  background: rgba(255, 0, 0, 1);
+  box-shadow: 2px 2px rgba(0, 0, 0, 1);
+}
+
+.uwaga button {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  background: rgba(255, 237, 0, 0.95);
+  border: 1px solid rgba(0, 0, 0, 1);
+  border-radius: 5px;
+  height: 1.5rem;
+  width: 4rem;
+  box-shadow: 2px 2px rgba(0, 0, 0, 1);
+  cursor: pointer;
+}
+
+.uwaga button:hover {
+  background: rgb(0, 120, 5, 1);
 }
